--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   intl: ^0.19.0
   action_slider: ^0.7.0
   url_launcher: ^6.3.1
-  # flutter_mrz_scanner: ^2.1.0
-  # permission_handler: ^11.3.1
+  flutter_mrz_scanner: ^2.1.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
