--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.3.1
   shared_preferences: ^2.3.3
   json_annotation: ^4.9.0
+  http: ^1.2.2
+  provider: ^6.1.2
   # flutter_mrz_scanner: ^2.1.0
   # permission_handler: ^11.3.1
 
